<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".MyAccountFragment">

	<GridLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:columnCount="3"
		android:padding="8dp"
		android:rowCount="3">

		<ImageView
			android:id="@+id/account_image"
			android:layout_width="@dimen/profile_picture_size"
			android:layout_height="@dimen/profile_picture_size"
			android:layout_row="0"
			android:layout_rowSpan="3"
			android:layout_rowWeight="1"
			android:layout_column="0"
			android:layout_columnWeight="1"
			android:layout_gravity="center"
			android:src="@mipmap/ic_launcher" />

		<TextView
			android:layout_row="0"
			android:layout_rowWeight="0"
			android:layout_column="1"
			android:layout_columnSpan="2"
			android:layout_columnWeight="1"
			android:text="@string/name" />

		<TextView
			android:layout_row="1"
			android:layout_column="1"
			android:layout_columnSpan="2"
			android:layout_columnWeight="1"
			android:text="@string/email" />

		<TextView
			android:layout_row="2"
			android:layout_column="1"
			android:layout_columnSpan="2"
			android:layout_columnWeight="1"
			android:text="@string/mode" />
	</GridLayout>
</LinearLayout>